// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageContentBody is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPageContentBody testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPageContentBody paddingSize l is rendered 1`] = `
<div
  class="euiPageContentBody euiPageContentBody--paddingLarge"
/>
`;

exports[`EuiPageContentBody paddingSize m is rendered 1`] = `
<div
  class="euiPageContentBody euiPageContentBody--paddingMedium"
/>
`;

exports[`EuiPageContentBody paddingSize none is rendered 1`] = `
<div
  class="euiPageContentBody"
/>
`;

exports[`EuiPageContentBody paddingSize s is rendered 1`] = `
<div
  class="euiPageContentBody euiPageContentBody--paddingSmall"
/>
`;

exports[`EuiPageContentBody restrict width can be set to a custom number 1`] = `
<div
  class="euiPageContentBody euiPageContentBody--restrictWidth-custom"
  style="max-width:1024px"
/>
`;

exports[`EuiPageContentBody restrict width can be set to a custom value and does not override custom style 1`] = `
<div
  class="euiPageContentBody euiPageContentBody--restrictWidth-custom"
  style="color:red;max-width:24rem"
/>
`;

exports[`EuiPageContentBody restrict width can be set to a default 1`] = `
<div
  class="euiPageContentBody euiPageContentBody--restrictWidth-default"
/>
`;
